Fixed alignment of kappa and odds ratio in tables

--- a/html/genereport.css
+++ b/html/genereport.css
@@ -91,6 +91,14 @@
     color:white;
 }
 
+.traittable .oddscol {
+    text-align:right;
+}
+
+.traittable .kappacol {
+    text-align:right;
+}
+
 
 /* Gene list formatting */
 
